--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,18 @@
       <scope>test</scope>
     </dependency>
 
+    <!--swagger2 api-ui 支持-->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.4.0</version>
+    </dependency>
+
     <!-- Mysql数据库链接jar包 -->
     <dependency>
       <groupId>mysql</groupId>
